--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
+    "date-fns": "^2.29.3",
+    "date-fns-tz": "^2.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
