--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "project-2": {
+    "Weather-Forecast": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:application": {
@@ -63,10 +63,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "project-2:build:production"
+              "browserTarget": "Weather-Forecast:build:production"
             },
             "development": {
-              "browserTarget": "project-2:build:development"
+              "browserTarget": "Weather-Forecast:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -74,7 +74,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "project-2:build"
+            "browserTarget": "Weather-Forecast:build"
           }
         },
         "test": {
@@ -95,5 +95,5 @@
       }
     }
   },
-  "defaultProject": "project-2"
+  "defaultProject": "Weather-Forecast"
 }
