--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Weather-Forecast",
+  "name": "weather_forecast",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -8,7 +8,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
-  "private": true,
+  "private": false,
   "dependencies": {
     "@angular/animations": "~13.3.0",
     "@angular/common": "~13.3.0",
